--- a/lms/templates/seq_module.html
+++ b/lms/templates/seq_module.html
@@ -13,7 +13,9 @@
     </div>
   % endif
   <div class="sequence-nav">
-    <button class="sequence-nav-button button-previous" aria-hidden="true">
+    <button class="sequence-nav-button button-previous"
+        aria-hidden="true"
+        ${"disabled=disabled" if disable_navigation else ""}>
       <span class="icon fa fa-chevron-prev" aria-hidden="true"></span>
       <span>${_('Previous')}</span>
     </button>
@@ -32,7 +34,8 @@
             data-element="${idx+1}"
             data-page-title="${item['page_title']}"
             data-path="${item['path']}"
-            id="tab_${idx}">
+            id="tab_${idx}"
+            ${"disabled=disabled" if disable_navigation else ""}>
             <span class="icon fa seq_${item['type']}" aria-hidden="true"></span>
             <span class="fa fa-fw fa-bookmark bookmark-icon ${"is-hidden" if not item['bookmarked'] else "bookmarked"}" aria-hidden="true"></span>
             <div class="sequence-tooltip sr"><span class="sr">${item['type']}&nbsp;</span>${item['page_title']}<span class="sr bookmark-icon-sr">&nbsp;${_("Bookmarked") if item['bookmarked'] else ""}</span></div>
@@ -41,7 +44,9 @@
         % endfor
       </ol>
     </nav>
-    <button class="sequence-nav-button button-next" aria-hidden="true">
+    <button class="sequence-nav-button button-next"
+        aria-hidden="true"
+        ${"disabled=disabled" if disable_navigation else ""}>
       <span>${_('Next')}</span>
       <span class="icon fa fa-chevron-next" aria-hidden="true"></span>
     </button>
