--- a/common/lib/xmodule/xmodule/css/sequence/display.scss
+++ b/common/lib/xmodule/xmodule/css/sequence/display.scss
@@ -12,7 +12,8 @@ $seq-nav-height: 44px;
 
   display: block;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background: none;
   }
 }
@@ -32,14 +33,15 @@ $seq-nav-height: 44px;
 
       display: block;
 
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         background: none;
       }
     }
   }
 }
 
-%ui-clear-button  {
+%ui-clear-button {
   background-color: transparent;
   background-image: none;
   background-position: center 14px;
@@ -81,6 +83,13 @@ $seq-nav-height: 44px;
     position: relative;
     height: 100%;
     flex-grow: 1;
+
+    // Hide the sequence list for mobile sizes
+    display: none;
+
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 
   ol {
@@ -127,28 +136,28 @@ $seq-nav-height: 44px;
 
         //video
         &.seq_video {
-          .icon:before {
+          .icon::before {
             content: "\f008"; // .fa-film
           }
         }
 
         //other
         &.seq_other {
-          .icon:before {
+          .icon::before {
             content: "\f02d"; // .fa-book
           }
         }
 
         //vertical
         &.seq_vertical {
-          .icon:before {
+          .icon::before {
             content: "\f00b";  // .fa-tasks
           }
         }
 
         //problems
         &.seq_problem {
-          .icon:before {
+          .icon::before {
             content: "\f044";  // .fa-pencil-square-o
           }
         }
